# gameboy

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  TODO  cbindgen.toml  gameboy.h  gameboy.wasm  index.html  index.js  pipe  rust-toolchain  webpack.config.js
.github/workflows/: FUNDING.yml  build.yml  ci.yml
desktop/: Cargo.toml  bin.rs
docs/: app.css  index.html  index.js  pkg_index_js.index.js
docs/gameboy/: .gitignore  index_bg.js  index_bg.wasm
examples/desktop/: Cargo.toml  Makefile  bin.rs
examples/ffi-go/: main_static.go
examples/terminal/: Cargo.toml  bin.rs
examples/window/: Cargo.toml  Makefile  bin.rs
pkg/: README.md  index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  lr35902.d.ts  lr35902.js  lr35902_bg.js  lr35902_bg.wasm  lr35902_bg.wasm.d.ts  package.json
server/: Cargo.toml  server.rs
site/: index.html
src/: bin.rs  gameboy.rs  gb.rs  gpu.rs  input.rs  lib.rs  memory.rs  mode.rs  renderer.rs  server.rs  sound.rs  vm.rs
src/cpu/: bit.rs  core.rs  cpu-2.rs  cpu-d.rs  cpu.prs  cpu.rs  cpu1.rs  cpu2.rs  daa.rs  data.rs  ld.rs  ldrr.rs  map.rs  misc.rs  mmu.rs  mod.rs  ops.rs  reg.rs  registers.rs  stack.rs  swap.rs  z80  z80.js
src/gpu/: gpu.rs  mod.rs  old_gpu.rs
src/mbc/: mbc0.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs
src/mmu/: mmu.rs  mod.rs  rtc.rs  serial.rs  timer.rs
src/screen/: debug_rom.rs  desktop.rs  mod.rs  tui.rs  web.rs
web/: Cargo.toml  app.css  web.rs  webpack.config.js
website/: Makefile  app.css  index.html  index.js  package-lock.json  webpack.config.js
