[package]
name = "lr35902"
version = "0.1.2"
description = "Gameboy emulator written in Rust and WebAssembly"
authors = ["Raphael Amorim <rapha850@gmail.com>"]
repository = "https://github.com/raphamorim/LR35902"
license = "MPL-2.0"
edition = "2021"

[lib]
name = "lr35902"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
desktop = []

[profile.release]
opt-level = 's'
lto = true
# The Rust compiler splits your crate into multiple codegen units to parallelize (and thus speed up) compilation. However, this might cause it to miss some potential optimizations.
codegen-units = 1

[dependencies]
js-sys = "0.3.59"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
console_error_panic_hook = "0.1.7"
libc = { version = "0.2.126" }
glutin = { version = "0.28.0" }
gl = { version = "0.14.0" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'ImageData',
  'Window',
  'KeyboardEvent',
]

#'WebGlBuffer',
#'WebGlRenderingContext',
#'ImageBitmap',
#'WebGlProgram',
#'WebGlShader',
