[package]
name = "gameboy"
version = "0.1.5"
description = "Gameboy emulator written in Rust and WebAssembly"
authors = ["Raphael Amorim <rapha850@gmail.com>"]
repository = "https://github.com/raphamorim/gameboy"
license = "MPL-2.0"
edition = "2021"

[lib]
name = "gameboy"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = ["libc", "glutin", "gl" ,"ratatui" ,"icy_sixel", "image", "ratatui-image"]
ffi = ["image", "base64"]

[profile.release]
opt-level = "s"
lto = "thin"
strip = true
debug = 0
panic = 'abort'
codegen-units = 1
incremental = false

[profile.dev]
split-debuginfo = "unpacked"
lto = false
incremental = true
opt-level = 0

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = { version = "0.2.126", optional = true }
glutin = { version = "0.28.0", optional = true }
gl = { version = "0.14.0", optional = true }
ratatui = { version = "^0.29.0", features = ["crossterm"], optional = true }
icy_sixel = { version = "^0.1.1", optional = true }
image = { version = "^0.25.1", default-features = false, features = ["jpeg", "png"], optional = true }
ratatui-image = { version = "4.2.0", optional = true }
base64 = { version = "0.21.7", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.59"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
console_error_panic_hook = "0.1.7"
web-sys = {version = "0.3.4", features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'ImageData',
  'Window',
  'KeyboardEvent',
]}

#'WebGlBuffer',
#'WebGlRenderingContext',
#'ImageBitmap',
#'WebGlProgram',
#'WebGlShader',
