[package]
name = "server"
version = "0.1.0"
description = "Server for LR35902"
authors = ["Raphael Amorim <rapha850@gmail.com>"]
edition = "2021"

[[bin]]
name = "server"
path = "server.rs"
test = false
bench = false

[dependencies]
axum = "0.5.13"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs"] }
