[package]
name = "desktop"
version = "0.1.0"
description = "Desktop Gameboy emulator written in Rust and WebAssembly"
authors = ["Raphael Amorim <rapha850@gmail.com>"]
repository = "https://github.com/raphamorim/LR35902"
license = "MPL-2.0"
edition = "2021"

[[bin]]
name = "desktop"
path = "bin.rs"
test = false
bench = false

[dependencies]
lr35902 = { path = "../../", features = ["desktop"] }
