[package]
name = "window"
version = "0.1.0"
description = "Desktop Gameboy emulator written in Rust and WebAssembly"
authors = ["Raphael Amorim <rapha850@gmail.com>"]
repository = "https://github.com/raphamorim/gameboy"
license = "MPL-2.0"
edition = "2021"

[[bin]]
name = "window"
path = "bin.rs"
test = false
bench = false

[dependencies]
gameboy = { path = "../../", features = ["desktop"] }